Fri Jan 14 21:55:39 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* gdbserver/low-lynx.c: Include <sys/wait.h> not "/usr/include/wait.h".

Fri Jan 14 14:17:06 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* utils.c (request_quit): Re-establish signal handler regardless
	of USG.

	* config/mips/xm-irix4.h: Define HAVE_TERMIOS.

Fri Jan 14 21:55:39 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* i960-tdep.c: Include target.h.

Fri Jan 14 17:12:28 1994  Stan Shebs  (shebs@andros.cygnus.com)

	* lynx-nat.c (sys/wait.h): Don't use absolute pathname.

Fri Jan 14 11:06:10 1994  Jim Kingdon  (kingdon@deneb.cygnus.com)

	* lynx-nat.c (child_wait): Fix thinkos in struct target_waitstatus
	changes (status -> ourstatus; declare status, etc.).
	* config/nm-lynx.h: Fix child_wait prototype and include target.h.

Fri Jan 14 14:17:06 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)
>>>>>>> 1.2118

	* Makefile.in (ALLPARAM): Add config/nm-lynx.h.

Fri Jan 14 11:49:44 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)

	* remote-mips.c (mips_request, mips_wait): Correct prototypes.

Fri Jan 14 11:37:17 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* config/i386/xm-linux.h: Define HAVE_TERMIOS.

Fri Jan 14 01:04:36 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* config/alpha/tm-alpha.h (CALL_DUMMY):  Improve comment.

Thu Jan 13 10:32:38 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* remote-vx.c (vx_wait): Only call i960_fault_to_signal if I80960
	is defined.  Otherwise just report TARGET_SIGNAL_UNKNOWN.

	* mips-tdep.c (mips_push_arguments): Byteswap struct_addr before
	writing it.

	Add search to target vector (#if 0'd until after 4.12):
	* target.h (to_search, target_search): Add.
	* gdbcore.h, core.c (generic_search): Add.
	* remote.c (remote_search): Add.
	* a29k-tdep.c (init_frame_info): Use target_search to find traceback
	tag.

	* printcmd.c (print_address_symbolic): If set print fast-symbolic-addr