@@ -1,5 +1,7 @@
 Fri Jan 14 21:55:39 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
+	* remote-udi.c (udi_create_inferior): Quote empty execfile argument.
+
 	* gdbserver/low-lynx.c: Include <sys/wait.h> not "/usr/include/wait.h".
 
 Fri Jan 14 14:17:06 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)
